# rust-metropolis

./: .gitignore  Cargo.toml  README.md  bindings.h  bindings.hpp  build.rs  test.c  test.cpp
cffi/: Makefile  bindings.hpp  test  test.cpp
cffi/example/: Makefile
cffi/examples/: Makefile  main.cpp
examples/: 2d_random_walk.rs  histo.py  histogram.py  random_walk_cauchy.rs  random_walk_laplace.rs
examples/ffi/: Makefile
pylib/: Cargo.toml  setup.py
pylib/examples/: cauchy_metropolis.py
pylib/rust_metropolis/: __init__.py
pylib/src/: lib.rs
src/: defs.rs  ffi.rs  lib.rs  random_walk.rs
src/random_walk/: multidimensional.rs
