[package]
name = "metropolis"
version = "0.1.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
edition = "2018"

[lib]
name = "metropolis"
crate-type = ["rlib", "cdylib"]

[features]
array = ["ndarray", "ndarray-rand"]

[dependencies]
serde = "1.0.85"
serde_json = "1.0.37"
statrs = "0.10.0"
rand = "0.6.4"
ndarray = { version = "0.12.1", optional = true }
ndarray-rand = { version = "0.9.0", optional = true }

[patch.crates-io]
statrs = { git = "https://github.com/boxtown/statrs" }

[build-dependencies]
cbindgen = "0.7.1"

[workspace]
members = [
    "pylib"
]
