[package]
name = "metropolis"
version = "0.2.3"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
edition = "2018"

[lib]
name = "metropolis"
crate-type = ["rlib", "cdylib"]

[features]
array = ["ndarray", "ndarray-rand"]

[dependencies]
serde = "1.0.90"
serde_json = "1.0.39"
statrs = "0.10.0"
rand = "0.6.5"
ndarray = { version = "0.12.1", optional = true }
ndarray-rand = { version = "0.9.0", optional = true }

[patch.crates-io]
statrs = { git = "https://github.com/boxtown/statrs" }
ndarray-rand = { git = "https://github.com/ManifoldFR/ndarray" }

[build-dependencies]
cbindgen = "0.8.3"

[workspace]
members = [
    "pylib"
]
