[package]
name = "metropolis"
version = "0.3.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
edition = "2018"

[lib]
name = "metropolis"
crate-type = ["rlib", "cdylib"]

[features]
array = ["ndarray", "ndarray-rand"]

[dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
statrs = "0.11.0"
rand = "0.6.5"
ndarray = { version = "0.12.1", optional = true }
ndarray-rand = { version = "0.9.0", optional = true }

[patch.crates-io]
ndarray-rand = { git = "https://github.com/ManifoldFR/ndarray" }

[[example]]
name = "2d_random_walk"
required-features = ["array"]

[build-dependencies]
cbindgen = "0.8.6"

[workspace]
members = [
    "pylib"
]
