[package]
name = "metropolis-pylib"
version = "0.1.0"
authors = ["ManifoldFR <manifoldfr@outlook.com>"]
edition = "2018"

[lib]
name = "metropolispy"
crate-type = ["cdylib"]

[dependencies]
metropolis = { path = "../"}
rand = "0.6.4"

[dependencies.pyo3]
version = "0.6.0-alpha.1"
features = ["extension-module"]
